Updated some comments section and combined code snippets

--- a/Day 3 Predicting Credit Card Fraud 20200417.ipynb
+++ b/Day 3 Predicting Credit Card Fraud 20200417.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<h1><center><font size=\"6\">Predicting Credit Card Fraud</font></center></h1>\n",
     "\n",
-    "<h3><center><font size=\"4\"> https://www.kaggle.com/mlg-ulb/creditcardfraud </font></center></h2>"
+    "<h2><center><font size=\"4\">Dataset used:Kaggle </font></center></h2>"
    ]
   },
   {
@@ -15,7 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Feature engineering uses Polynomial Features rather than Feature Tools"
+    "\n",
+    "# Change the feature engineering to include Polynomial Features rather than Feature Tools\n",
+    "# Include the Bad column identification & removal from previous week\n",
+    "# Get the Feature Reduction part (Collinear columns & those with low feature importances)"
    ]
   },
   {
@@ -60,7 +63,7 @@
    "source": [
     "# <a id='1'>Introduction</a>  \n",
     "\n",
-    "We will use feature tools library to expand the feature space using the built-in transformations. Then once the synthetic features are created, we will to reduce the feature space by removing collinear columns, feature importances and Recursive Feature Elimination. Finally we will run the Random Forest Classifier to get test performance on datasets that have been resampled using the technique identified in the previous week\n"
+    "We will use a mix of custom functions and polynomial feature generation API to expand the feature space. Then once the synthetic features are created, we will to reduce the feature space by removing collinear columns and filtering further by the top features from the feature importances. Finally we will run the Random Forest Classifier to get test performance on datasets that have been resampled using the technique identified in the previous analysis.\n"
    ]
   },
   {
@@ -722,7 +725,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are going to reduce our memory footprint of the stored dataframe to ease the burden on the processing. Subsequently, we are also cut down on the number of features we want to apply feature engineering on by using the top features identified by a ML classifier like RandomForestClassifier"
+    "We are going to reduce our memory footprint of the stored dataframe to ease the burden on the processing. Subsequently, we are going to cut down on the number of features we want to apply feature engineering on by using the top features identified by a ML classifier like RandomForestClassifier"
    ]
   },
   {
@@ -867,10 +870,10 @@
     }
    ],
    "source": [
-    "# #Based on this great kernel https://www.kaggle.com/arjanso/reducing-dataframe-memory-size-by-65\n",
+    "%%times\n",
+    "# Based on this great kernel https://www.kaggle.com/arjanso/reducing-dataframe-memory-size-by-65\n",
     "\n",
     "from helper_functions_comprehensive import reduce_mem_usage_function\n",
-    "# reduce_mem_usage_function(dataframe, print_ongoing_column_change = True, percentile_threshold = 0.01)\n",
     "\n",
     "df, NA_dict = reduce_mem_usage_function(df)\n",
     "# There is 2x reduction in the size of the data\n",
@@ -1214,8 +1217,6 @@
     }
    ],
    "source": [
-    "# Lets define a simple classifier based on the above augmented data\n",
-    "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "classifier = RandomForestClassifier(random_state = 42)\n",
     "\n",
@@ -1227,7 +1228,7 @@
     "\n",
     "# Create a dataframe to hold the feature importances\n",
     "feature_importances_df = pd.DataFrame({'feature': list(X.columns), \n",
-    "                    'importance': feature_importances}).sort_values('importance', ascending = False)\n",
+    "'importance': feature_importances}).sort_values('importance', ascending = False)\n",
     "\n",
     "feature_importances_df.head(10)\n",
     "# Print from the highest to the lowest feature importance"
@@ -1469,22 +1470,22 @@
     "for col in engineered_df.columns:\n",
     "    print(col)\n",
     "    \n",
-    "    engineered_df['square_'+col] = engineered_df[col].apply(lambda x: x*x)\n",
+    "    engineered_df['square_' + col] = engineered_df[col].apply(lambda x: x*x)\n",
     "\n",
     "    min_val = engineered_df[col].min()\n",
     "    # Apply log transformation while ensuring no NaNs are generated\n",
-    "    engineered_df['log_'+col] = engineered_df[col].apply(lambda x: np.log(x-min_val+1))\n",
+    "    engineered_df['log_' + col] = engineered_df[col].apply(lambda x: np.log(x-min_val+1))\n",
     "    \n",
     "    # Similarly, subtract the min to make sure that the sqrt is always positive\n",
-    "    engineered_df['sqrt_'+col] = engineered_df[col].apply(lambda x: np.sqrt(x-min_val))\n",
+    "    engineered_df['sqrt_' + col] = engineered_df[col].apply(lambda x: np.sqrt(x-min_val))\n",
     "        \n",
     "    # If else function for the reciprocal to work correctly\n",
-    "    engineered_df['reciproc_'+col] = engineered_df[col].apply(lambda x: 1./x if np.abs(x) else 0)\n",
+    "    engineered_df['reciproc_' + col] = engineered_df[col].apply(lambda x: 1./x if np.abs(x) else 0)\n",
     "    \n",
     "print('No. of columns now are {}'.format(len(engineered_df.columns)))\n",
     "\n",
     "# The number of columns makes sense because 10 original columns *4 operations = 40 new columns\n",
-    "# This takes a while to run because the element-wise operations are slow"
+    "# This takes a while to run because the row-wise operations are slow"
    ]
   },
   {
@@ -1748,14 +1749,23 @@
     "# Note that I have changed the include_bias to False, otherwise it creates a column of 1s\n",
     "\n",
     "engineered_df = pd.DataFrame(poly_object.fit_transform(engineered_df), \n",
-    "                             columns = list(poly_object.get_feature_names(engineered_df.columns)))\n",
-    "engineered_df.head()\n",
-    "# you start seeing both square terms as well as cross-terms between the variables\n",
+    "                columns = list(poly_object.get_feature_names(engineered_df.columns)))\n",
+    "\n",
     "\n",
     "# How do you figure out the number of new columns being generated?\n",
     "# https://math.stackexchange.com/questions/1424824/general-formula-for-number-of-terms-in-an-expansion\n",
     " \n",
     "# Number of terms in the expansion (a1+a2+...a50)^2 = 1275 because (n+k-1)C(k-1) = (2+50-1)C(50-1) = 51C49 = 1275?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engineered_df.head()\n",
+    "# you start seeing both square terms as well as cross-terms between the variables"
    ]
   },
   {
@@ -4677,7 +4687,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For our dataset, its highly unlikely we have duplicate columns because they are not categorical"
+    "For our dataset, its highly unlikely we have duplicate columns because they are not categorical. But there are cross terms like sq() of sqrt() which will give you back the original feature"
    ]
   },
   {
@@ -4710,15 +4720,15 @@
     "constant_non_numeric_col_list, duplicate_col_list = find_bad_columns_function(engineered_df)\n",
     "\n",
     "print('Before dropping irrelevant features and duplicated columns,')\n",
-    "print('{} number of columns were present'.format(len(engineered_df.columns)))\n",
-    "\n",
-    "# as expected, there are no duplicate columns or those with nulls"
+    "print('{} number of columns were present'.format(len(engineered_df.columns)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4734,11 +4744,11 @@
    "source": [
     "%%time\n",
     "\n",
-    "# November 11th 2019: Removed null_col_list because I noticed columns that had some but not all NAN\n",
     "already_dropped_col_set = set()\n",
     "for drop_column_list in [null_col_list, constant_numeric_col_list, \n",
     "                         constant_non_numeric_col_list, duplicate_col_list]:\n",
     "    \n",
+    "    # This is just to prevent error messages\n",
     "    to_drop_set = set(drop_column_list) - already_dropped_col_set\n",
     "    \n",
     "    # Drop the above but only those that have not already been dropped     \n",
@@ -4774,30 +4784,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 15min 42s, sys: 1.29 s, total: 15min 44s\n",
-      "Wall time: 15min 43s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "# Threshold for removing correlated variables. This is arbitrary and can itself be a hyperparam\n",
-    "collinearity_threshold = 0.80\n",
-    "\n",
-    "# Absolute value correlation matrix. The default in Pearson but you should use Spearman for Ordinal categoricals\n",
-    "corr_matrix_df = engineered_df.corr().abs()\n",
-    "corr_matrix_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -4812,6 +4798,14 @@
    ],
    "source": [
     "%%time\n",
+    "\n",
+    "# Threshold for removing correlated variables. This is arbitrary and can itself be a hyperparam\n",
+    "collinearity_threshold = 0.80\n",
+    "\n",
+    "# Absolute value correlation matrix. \n",
+    "# The default in Pearson but you should use Spearman for Ordinal categoricals\n",
+    "corr_matrix_df = engineered_df.corr().abs()\n",
+    "\n",
     "# Upper triangle of correlations\n",
     "# np.triu returns a matrix with elements below the kth diagonal zeroed\n",
     "# https://docs.scipy.org/doc/numpy/reference/generated/numpy.triu.html\n",
@@ -4912,7 +4906,7 @@
     "feature_importances = classifier.feature_importances_\n",
     "\n",
     "feature_importances_df = pd.DataFrame({'feature': list(engineered_df.columns), \n",
-    "                    'importance': feature_importances}).sort_values('importance', ascending = False)\n",
+    "'importance': feature_importances}).sort_values('importance', ascending = False)\n",
     "\n",
     "feature_importances_df.head()\n",
     "# Print from the highest to the lowest"
@@ -5049,7 +5043,7 @@
    ],
    "source": [
     "from helper_functions_comprehensive import plot_feature_importances\n",
-    "norm_feature_importances_df,no_of_important_col = plot_feature_importances(feature_importances_df, threshold = 0.90)"
+    "norm_feature_importances_df, no_of_important_col = plot_feature_importances(feature_importances_df, threshold = 0.90)"
    ]
   },
   {
@@ -5539,7 +5533,8 @@
    "source": [
     "# split into train and test set \n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(engineered_df[relevant_feature_list[:25]], y, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(engineered_df[relevant_feature_list[:25]], \n",
+    "                                                    y, test_size=0.2, random_state=42)"
    ]
   },
   {
@@ -5567,7 +5562,7 @@
     "from helper_functions_comprehensive import augment_data_function\n",
     "\n",
     "X_resampled_train, y_resampled_train = augment_data_function(X_train, y_train, \n",
-    "                                                             positive_upsampling_ratio=4, negative_upsampling_ratio=2)\n",
+    "                    positive_upsampling_ratio=4, negative_upsampling_ratio=2)\n",
     "print(X_resampled_train.shape,sum(y_resampled_train))"
    ]
   },
@@ -5719,7 +5714,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets also bring in our custom metric to allow us to compare with our week1 model performance"
+    "Lets also bring in our custom metric to allow us to compare with our day1 model performance"
    ]
   },
   {
@@ -5736,9 +5731,7 @@
     }
    ],
    "source": [
-    "from helper_functions_comprehensive import precision_at_recall_threshold\n",
-    "from helper_functions_comprehensive import classification_report, confusion_matrix, plot_confusion_matrix_function\n",
-    "\n",
+    "from helper_functions_comprehensive import precision_at_recall_threshold_function\n",
     "\n",
     "predicted_proba = classifier.predict_proba(X_test)[:,1]\n",
     "threshold_precision = precision_at_recall_threshold(y_test, predicted_proba, recall_threshold=0.85)\n",
@@ -5859,7 +5852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
