Ensemble Hyperparam tuning
Updated the Table of contents

--- a/Day 5 Predicting Credit Card Fraud 20200428.ipynb
+++ b/Day 5 Predicting Credit Card Fraud 20200428.ipynb
@@ -38,14 +38,15 @@
     "            1. [XGBoost](#4225)\n",
     "    1. [GridSearchCV on Classifiers](#43)\n",
     "\n",
-    "1. [Data Cleansing](#5)\n",
-    "    1. [Selecting top features using Feature Importances](#51)\n",
-    "    1. [Isolating the Fraudulent data points](#52)\n",
-    "    1. [Visualizing Distributions of top features](#53)\n",
-    "    1. [Outlier Definition, Detection & Removal](#54)\n",
-    "    1. [Testing Performance Improvement](#55)\n",
-    "    \n",
-    "1. [Intermediate Data Export](#6)\n",
+    "1. [Create Ensemble - Voting Classifier](#5)\n",
+    "    1. [Prep](#51)\n",
+    "         1. [Upsample Train Data](#511)\n",
+    "         1. [Initialize Base Classifiers](#512)\n",
+    "    1. [Fit Voting Classifier ](#52)\n",
+    "\n",
+    "1. [Test Performance](#6)\n",
+    "    1. [Classification Report & Confusion Matrix](#61)\n",
+    "    1. [Precision Recall Curve](#62)\n",
     "\n",
     "1. [References](#7)"
    ]
